# qualgent-challenge

./: .env.example  .gitignore  PRESENTATION.md  README.md  adb_tools.py  agents.py  main.py  prompts.py  pyproject.toml  report.md  requirements.txt  setup.sh  verify_framework.py
docs/: ARCHITECTURE.md  METRICS.md  TEST_CASES.md  TOOLS.md
src/: __init__.py  main.py
src/mobile_qa_agent/: __init__.py  agent.py
src/mobile_qa_agent/tools/: __init__.py  adb_tools.py  metrics.py
tests/: __init__.py  test_adb_tools.py  test_metrics.py
